# Lebanese-Franco-Factory

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/chat/: golden.json
benchmarks/conversion/: golden.json
benchmarks/reasoning/: golden.json
benchmarks/slang/: golden.json
benchmarks/typos/: golden.json
configs/datasets/chat_sft/: casual_chat.yaml  football.yaml  office.yaml
configs/datasets/conversion/: arabic_to_franco.yaml  english_to_franco.yaml  franco_to_arabic.yaml  franco_to_english.yaml
configs/datasets/instruction/: explain.yaml  rewrite.yaml  summarize.yaml
configs/datasets/spelling/: abbreviations.yaml  augmentation.yaml  typos.yaml  variants.yaml
configs/datasets/synth/: franco_synth.yaml
configs/training/: qwen_lora_cpu_tiny.yaml  qwen_lora_default.yaml
data/review/: needs_human_v0.2.done.jsonl  needs_human_v0.2.jsonl  queue_v0.2.jsonl
data/rules/: abbreviations.json  arabizi_map.json  phrase_lexicon.json  spelling_variants.json
data/templates/chat/: casual_chat.json  football.json  office.json
dictionary/: cities.json  curated_chat.json  dictionary_index.json  emotions.json  family.json  food.json  gaming.json  greetings.json  programming.json  relationships.json  schema.json  sources.md  sports.json  technology.json  time.json  verbs.json  work.json
docs/: dictionary-packs.md  gold-export-v0.2.md  plugins.md  providers.md  training-v0.2-cpu-note.md  training.md  v0.2-next-steps.md
docs/api/: README.md  index.html  lebanese_franco_factory.html  search.js
docs/api/lebanese_franco_factory/: benchmarks.html  cli.html  core.html  dashboard.html  dictionary.html  factory.html  providers.html  review.html  training.html
docs/api/lebanese_franco_factory/benchmarks/: runner.html
examples/: generate_conversion.sh
feedback/: human_feedback.jsonl
plugins/_template/: plugin.py
plugins/augmentation/: plugin.py
plugins/chat/: plugin.py
plugins/conversion/: plugin.py
plugins/instruction/: plugin.py
plugins/spelling/: plugin.py
plugins/synth/: plugin.py
scripts/: apply_feedback.py  dashboard.py  evaluate.py  export.py  generate.py  review.py  train.py  validate.py
src/lebanese_franco_factory/: __init__.py
src/lebanese_franco_factory/benchmarks/: runner.py
src/lebanese_franco_factory/cli/: __init__.py  __main__.py  docs.py  main.py
src/lebanese_franco_factory/core/: config.py  paths.py  plugin_loader.py  schemas.py
src/lebanese_franco_factory/dashboard/: app.py
src/lebanese_franco_factory/dictionary/: loader.py
src/lebanese_franco_factory/factory/: cli.py  conversion.py  feedback.py  pipeline.py
src/lebanese_franco_factory/providers/: __init__.py  base.py  huggingface.py  litellm_provider.py  ollama.py  openai_provider.py  registry.py  vllm_provider.py
src/lebanese_franco_factory/review/: app.py
src/lebanese_franco_factory/training/: lora_train.py  prepare.py
tests/: 100_expected_outputs.json  test_golden_outputs.py
tests/integration/: test_cli_generate.py  test_generate_smoke.py
tests/performance/: test_generate_throughput.py
tests/plugins/: test_all_plugins.py  test_synth_plugin.py
tests/unit/: test_cleaner_export.py  test_config_loader.py  test_dictionary_loader.py  test_plugins.py  test_providers.py  test_schemas.py
(+42 files in other folders)
