[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lebanese-franco-factory"
version = "0.1.0"
description = "Factory for Lebanese Franco (Arabizi) dataset generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Juliano Saad" }]
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.8"]
dashboard = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]
train = ["transformers>=4.40", "datasets>=2.18", "peft>=0.10", "accelerate>=0.28"]

[project.scripts]
lff-generate = "lebanese_franco_factory.factory.cli:main"
lff-train = "lebanese_franco_factory.training.lora_train:main"
lff-eval = "lebanese_franco_factory.benchmarks.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
